# CPG-RBFN-framework

./: README.md  requirements.txt
data/: Behavior_advanced_all_norm.txt  Behavior_advanced_all_reduced_wall_fric.txt  Behavior_data_advanced.txt  Behavior_data_primitive.txt  Behavior_pipe_norm_fric.txt  Behavior_pipe_reduced_fric.txt  README.md  RL_job_direction.json  RL_job_high.json  RL_job_low.json  RL_job_narrow.json  RL_job_obstacle.json  RL_job_obstacle_direct.json  RL_job_tilt.json  RL_job_tilt3.json  RL_job_wall.json  RL_log_joint_sensor_off_direction.txt  RL_log_joint_sensor_off_obstacle.txt  RL_log_joint_sensor_off_tilt.txt  RL_log_joint_sensor_on_direction.txt  RL_log_joint_sensor_on_obstacle.txt  RL_log_joint_sensor_on_tilt.txt  behavior_wall_tilt_1Fric.txt  behavior_wall_tilt_2Fric.txt  behavior_wall_tilt_nofric.txt
interfaces/morf/sim/build_dir/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  morf_controller.cbp
interfaces/morf/sim/build_dir/atomic_configure/: setup.sh
interfaces/morf/sim/build_dir/catkin_generated/: generate_cached_setup.py  setup_cached.sh
interfaces/morf/sim/build_dir/catkin_generated/stamps/morf_controller/: _setup_util.py.stamp
interfaces/morf/sim/build_dir/devel/: .catkin  .rosinstall  local_setup.sh
interfaces/morf/sim/build_dir/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
interfaces/morf/sim/build_dir/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
interfaces/morf/sim/build_dir/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
machine_learning/: RL_PIBB.py  RL_encoding.py  RL_master.py  RL_plotter.py  RL_plotter_offline.py  RL_repeater.sh  RL_workerhandle.py  run_sim.sh  vreprepeater.py
simulations/: Advanced_env.ttt  Advanced_newton_env.ttt  MORF_base_behavior.ttt  MORF_bodyposture_behavior.ttt  MORF_direction_behavior.ttt  MORF_height_behavior.ttt  MORF_obstacle_behavior.ttt  MORF_pipe_behavior.ttt  MORF_wall_behavior.ttt  advanced_multiple_with_step.ttt  primitive_env_sensorfail.ttt  (+1 more)
(+5114 files in other folders)
